MemoryDumpManager constructor ensures TraceLog has been created.

Lazy initialization of TraceLog may cause a deadlock.

Bug: 764357
Change-Id: Ica08b4478aa09e03a3fa0761ec8ed787b1922cb6